# retrieve

./: .env.example  .flake8  .gitignore  .isort.cfg  .python-version  LICENCE.en.txt  LICENCE.fr.txt  LICENCIA.es.txt  LICENSE  README.md  TODO.md  build.py  build.sh  cache.pyx  chain.pyx  document.pyx  embed.pyx  embeddings.pyx  helpers.pyx  main.py  modelfile  prompt.pyx  pyproject.toml  requirements.txt  setup.py  setup.sh  splitter.pyx  store.pyx  text_splitter.py  text_splitter.pyx
doc/1-domain-modelling/: v1.md
src/cli/: __init__.py  __main__.py  _cache.py  _cache.pyi  _split.py  _split.pyi  tasks.toml
src/docs/: __init__.py  _config.py  typing.py
src/docs/adapters/: __init__.py  _orm.py  _repo.py
src/docs/adapters/orm/: __init__.py  _library_orm.py
src/docs/adapters/repo/: __init__.py  _library_repo.py
src/docs/app/: __init__.py  _services.py
src/docs/domain/: __init__.py  _library.py  _models.py  _services.py
src/docs/infra/: __init__.py  _orm.py  _repo.py
src/retrievals/: __init__.py  _caching.pxd  _text.pxd  _text.pyx  _utils.pyx  chain.pyx  embed.pyx  embeddings.py  query.pyx  store.pyx
src/zotero/: __init__.py
src/zotero/infra/: __init__.py  _conn.py  _repo.py
src/zotero/infra/mappings/: __init__.py  _base_field_mappings.py  _base_field_mappings_combined.py  _charsets.py  _collection_items.py  _collection_relations.py  _collections.py  _creator_types.py  _creators.py  _custom_base_field_mappings.py  _custom_fields.py  _custom_item_type_fields.py  _custom_item_types.py  _db_debug_1.py  _deleted_collections.py  _deleted_items.py  _deleted_searches.py  _feed_items.py  _feeds.py  _field_formats.py  _fields.py  _fields_combined.py  _file_type_mime_types.py  _file_types.py  _fulltext_items.py  _fulltext_words.py  _group_items.py  _groups.py  _item_annotations.py  _item_attachments.py  _item_creators.py  _item_data.py  _item_data_values.py  _item_notes.py  _item_relations.py  _item_tags.py  _item_type_creator_types.py  _item_type_fields.py  _item_type_fields_combined.py  _item_types.py  (+22 more)
src/zotero/infra/models/: __init__.py  _base.py  _base_field_mappings.py  _base_field_mappings_combined.py  _charsets.py  _collection_items.py  _collection_relations.py  _collections.py  _creator_types.py  _creators.py  _custom_base_field_mappings.py  _custom_fields.py  _custom_item_type_fields.py  _custom_item_types.py  _db_debug_1.py  _deleted_collections.py  _deleted_items.py  _deleted_searches.py  _feed_items.py  _feeds.py  _field_formats.py  _fields.py  _fields_combined.py  _file_type_mime_types.py  _file_types.py  _fulltext_items.py  _fulltext_words.py  _group_items.py  _groups.py  _item_annotations.py  _item_attachments.py  _item_creators.py  _item_data.py  _item_data_values.py  _item_notes.py  _item_relations.py  _item_tags.py  _item_type_creator_types.py  _item_type_fields.py  _item_type_fields_combined.py  (+23 more)
src/zotero_qa/: __init__.c  __init__.pxd  __init__.py  __init__.pyx  _caching.cpp  _caching.h  _caching.pxd  _caching.pyx  _document.pxd  _pdf.c  _pdf.pxd  _pdf.py  _pdf.pyx  _text.c  _text.pxd  _text.pyx  _utils.c  _utils.pyx  cache.pxd  cache.pyx  chain.c  chain.pyx  document.pxd  document.pyx  embed.c  embed.pyx  embeddings.py  helpers.pyx  llm.pyx  prompt.pyx  query.c  query.pyx  store.c  store.pyx  text_splitter.pyx
src/zotero_qa/domain/: _document.py
src/zotero_qa/domain/document_management/: _document.py
src/zotero_qa/usecases/: __init__.py
tests/: test_cache.py  test_caching.py  test_document.py  test_pdf.py  test_text.py  test_text_splitter.py  test_utils.py
tests/docs/: conftest.py  test_config.py
tests/docs/adapters/: conftest.py
tests/docs/adapters/repo/: test_library_repo.py
tests/docs/app/: test_app_services.py  test_services.py
tests/docs/domain/: test_domain_services.py  test_services.py
tests/docs/infra/: test_file_repo.py  test_library_repo.py
tests/docs/infra/repo/: test_collection_repo.py  test_item_repo.py  test_library_repo.py
tests/embeds/: test_caching.py  test_pdf.py  test_text.py  test_utils.py
tests/embeds/domain/: test_document_management.py
tests/pdf/: test_pdf_loader.py  test_pdf_parser.py
tests/zotero/infra/: test_conn.py  test_repo.py
tests/zotero/infra/mappings/: test_item.py  test_library.py
tests/zotero/infra/models/: test_item.py  test_library.py
tests/zotero_qa/: test_text.py
tests/zotero_qa/domain/: test_document_management.py
