[build-system]
requires = [
    "Cython>=3.0.0",
    "numpy>=1.26.4",
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.1",
    "python-dotenv>=1.0.1",
    "setuptools>=61.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "zotero-qa"
version = "0.0.0"
description = ""
authors = ["Mauko Quiroga-Alvarado <mauko@redte.ch>"]
license = "APGL-3.0"
readme = "README.md"
packages = [
    { include = "zotero_qa", from = "src" },
    { include = "cli", from = "src" },
]
include = ["src/**/*.so", "src/**/*.pyd", "src/**/*.dylib"]

[tool.poetry.build]
script = 'build.py'
generate-setup-file = false

[tool.poetry.scripts]
zotero = "cli:app"

[tool.poetry.dependencies]
python = "^3.11"
alive-progress = "3.1.5"
chromadb = "0.4.24"
cryptography = "42.0.5"
langchain = "0.1.9"
langchain-community = "0.0.24"
python-dotenv = "1.0.1"
pymupdf = "^1.23.26"
ujson = "^5.9.0"
cyclopts = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
cython = "3.0.8"
cython-lint = "0.16.0"
ipython = "8.22.1"
mypy = "1.8.0"
ruff = "^0.3.0"
isort = "^5.13.2"
pytest-sugar = "^1.0.0"
pytest-randomly = "^3.15.0"
pytest-clarity = "^1.0.1"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"

[tool.poe.tasks.format]
sequence = [
    "autopep8 .",
    "isort .",
    "black .",
    "ruff format .",
]
help = "Format all code."
default_item_type = "cmd"

[tool.poe.tasks.lint]
sequence = [
    "flake8 .",
    "cython-lint .",
    "black --check .",
    "ruff check --preview .",
    "mypy src",
]
help = "Lint all code."
default_item_type = "cmd"

[tool.poe.tasks.test]
sequence = ["pytest ."]
help = "Test all code."
default_item_type = "cmd"

[tool.isort]
profile = "black"
py_version=311

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # flake8-pytest-style
    "PT",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TCH",
    # comprehensions
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
    # flake8-future-annotations
    "FA",
]
ignore = ["ISC001"]

[tool.mypy]
python_version = "3.11"
allow_redefinition = false
check_untyped_defs = true
files = ["src/**/*.py", "src/**/*.pyx", "src/**/*.pyd"]
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict = true
strict_optional = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --capture=fd --quiet"
empty_parameter_set_mark = "fail_at_collect"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "ignore::RuntimeWarning",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
