[build-system]
    requires = [
        "Cython>=3.0.0",
        "numpy>=1.26.4",
        "poetry-core>=1.0.0",
        "poetry-dynamic-versioning>=1.0.1",
        "python-dotenv>=1.0.1",
        "setuptools>=61.0",
    ]
    build-backend = "poetry_dynamic_versioning.backend"

[tool.poe]
    [tool.poe.tasks.build]
        cmd = "python build.py --inplace --verbose -- ${file}"
        help = "Build a file for rapid development."

        [[tool.poe.tasks.build.args]]
            name = "file"
            help = "Name of the file to build."
            required = true

    [tool.poe.tasks.clean]
        sequence = [
            "find . -name '*.c' -delete",
            "find . -name '*.cpp' -delete",
            "find . -name '*.dylib' -delete",
            "find . -name '*.html' -delete",
            "find . -name '*.pyc' -delete",
            "find . -name '*.pyd' -delete",
            "find . -name '*.so' -delete",
            "find . -name '__pycache__' -delete",
            "rm -rf build dist src/*.egg-info",
        ]
        help = "Clean all build and built files."
        default_item_type = "cmd"

    [tool.poe.tasks.test]
        sequence = ["pytest tests"]
        help = "Test all code."
        default_item_type = "cmd"

    [tool.poe.tasks.lint]
        sequence = [
            "flake8 .",
            "cython-lint .",
            "black --check .",
            "ruff check --preview .",
            "mypy src",
        ]
        help = "Lint all code."
        default_item_type = "cmd"

    [tool.poe.tasks.format]
        sequence = [
            "autopep8 .",
            "isort .",
            "black .",
            "ruff format .",
            "mdformat doc",
        ]
        help = "Format all code."
        default_item_type = "cmd"

[tool.poetry]
    authors = ["Mauko Quiroga-Alvarado <mauko@redte.ch>"]
    description = ""
    include = ["src/**/*.so", "src/**/*.pyd", "src/**/*.dylib"]
    license = "APGL-3.0"
    name = "retrievalist"
    readme = "README.md"
    version = "0.0.0-post.22+7cefc52"
    packages = [
        { include = "docs", from = "src" },
    ]

    [tool.poetry.dependencies]
        python = "^3.11 || ^3.12"
        chromadb = "0.4.24" # VectorDB
        cryptography = "42.0.5" # For PDFs with passwords
        langchain = "0.1.9" # LLM tools
        langchain-community = "0.0.24" # LLM tools community
        msgspec = "^0.18.6" # Fast JSON/MsgPack encoding/decoding/parsing
        poethepoet = "^0.25.0" # CLI tools
        pymupdf = "^1.23.26" # PDF parsing
        python-dotenv = "1.0.1" # Environment variables # TODO: Replace / remove
        rich = "^13.7.1" # Pretty printing
        sqlmodel = "^0.0.16"

    [tool.poetry.group.dev.dependencies]
        Cython = "3.0.8" # C/C++ compiling
        autopep8 = "^2.0.4" # Code formatting
        black = "24.2.0" # Code formatting
        cython-lint = "0.16.0" # Cython linting
        flake8 = "^7.0.0" # Linting
        ipython = "8.22.1" # Interactive shell
        isort = "^5.13.2" # Import sorting
        mdformat = "^0.7.17" # Markdown formatting
        mypy = "1.8.0" # Type checking
        pytest = "^8.0.2" # Testing
        pytest-clarity = "^1.0.1" # Simpler test output
        pytest-randomly = "^3.15.0" # Test randomization
        ruff = "^0.3.0" # Linting

    [tool.poetry.build]
        script = 'build.py'
        generate-setup-file = false

    [tool.poetry.scripts]
        zotero = "cli.__main__:main"

[tool.mypy]
    python_version = "3.11"
    allow_redefinition = false
    check_untyped_defs = true
    files = ["src/**/*.py", "src/**/*.pyx", "src/**/*.pyd"]
    ignore_errors = false
    ignore_missing_imports = false
    implicit_reexport = false
    local_partial_types = true
    no_implicit_optional = true
    strict = true
    strict_optional = true
    warn_no_return = true
    warn_unreachable = true

[tool.pytest.ini_options]
    addopts = "--strict-markers --strict-config --capture=fd --quiet"
    empty_parameter_set_mark = "fail_at_collect"
    testpaths = ["tests"]
    xfail_strict = true
    filterwarnings = [
        "ignore::pytest.PytestCollectionWarning",
        "ignore::RuntimeWarning",
    ]
    doctest_optionflags = [
        "NORMALIZE_WHITESPACE",
        "IGNORE_EXCEPTION_DETAIL",
        "ELLIPSIS",
    ]

[tool.poetry-dynamic-versioning]
    enable = false
    vcs = "git"
    style = "semver"

[tool.isort]
    profile = "black"
    py_version=311

[tool.black]
    target-version = ["py311"]

[tool.ruff]
    target-version = "py311"

    [tool.ruff.format]
        docstring-code-format = true

    [tool.ruff.lint]
        select = [
            # pyflakes
            "F",
            # pycodestyle
            "E", "W",
            # flake8-2020
            "YTT",
            # flake8-bugbear
            "B",
            # flake8-quotes
            "Q",
            # flake8-debugger
            "T10",
            # flake8-gettext
            "INT",
            # pylint
            "PL",
            # flake8-pytest-style
            "PT",
            # misc lints
            "PIE",
            # flake8-pyi
            "PYI",
            # tidy imports
            "TID",
            # implicit string concatenation
            "ISC",
            # type-checking imports
            "TCH",
            # comprehensions
            "C4",
            # pygrep-hooks
            "PGH",
            # Ruff-specific rules
            "RUF",
            # flake8-bandit: exec-builtin
            "S102",
            # numpy-legacy-random
            "NPY002",
            # Perflint
            "PERF",
            # flynt
            "FLY",
            # flake8-logging-format
            "G",
            # flake8-future-annotations
            "FA",
        ]
        ignore = ["ISC001"]
